--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "/home/miket/.platformio/penv/bin/python3",
+    "python.pythonPath": "/usr/bin/python3",
     "python.formatting.provider": "yapf"
 }
