--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-keycad.kicad_pcb
-keycad.net
+.vscode/.ropeproject/objectdb
+*.bak
 *.erc
 *.log
 fp-info-cache
 keycad_lib_sklib.py
-*.bak
 keycad-kinjector.json
-keycad.pro
-.vscode/.ropeproject/objectdb
 keycad.bck
 keycad.dcm
 keycad.dsn
+keycad.kicad_pcb
 keycad.kicad_pcb-bak
+keycad.net
+keycad.pro
 keycad.ses
+ptvsd_launcher_lib_sklib.py
+ptvsd_launcher.net
