--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "keycad.keycad",
+            "module": "keycad.main",
             "cwd": "${workspaceFolder}",
             "args": [
                 "--position_json_filename",
