Fixed module layout. Parts placed better

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,29 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Module",
-            "type": "python",
-            "request": "launch",
-            "module": "keycad.main",
-            "cwd": "${workspaceFolder}",
-            "args": [
-                "--position_json_filename",
-                "${workspaceFolder}/kle_layouts/68keys-io.positions.json",
-                "--out_dir",
-                "${workspaceFolder}/out",
-                "${workspaceFolder}/kle_layouts/68keys-io.json"
-            ],
-            "env": {
-                "KICAD_SYMBOL_DIR": "${workspaceFolder}",
-                "KISYSMOD": "${workspaceFolder}",
-            }
-        },
-        {
             "name": "Process current KLE file",
             "type": "python",
             "request": "launch",
             "cwd": "${workspaceFolder}",
-            "program": "${workspaceFolder}/keycad/main.py",
+            "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
             "args": [
                 "--position_json_filename",
