--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-.vscode/.ropeproject/objectdb
 *.bak
 *.erc
 *.log
+*.pyc
+.vscode/.ropeproject/objectdb
+__pycache__/
+build/
+dist/
 fp-info-cache
-keycad_lib_sklib.py
+gui_defaults.par
 keycad-kinjector.json
 keycad.bck
 keycad.dcm
 keycad.dsn
+keycad.egg-info/
 keycad.kicad_pcb
 keycad.kicad_pcb-bak
 keycad.net
 keycad.pro
 keycad.ses
-ptvsd_launcher_lib_sklib.py
-ptvsd_launcher.net
-__pycache__/
-build/
-dist/
-keycad.egg-info/
+keycad_lib_sklib.py
 main_lib_sklib.py
-gui_defaults.par
+ptvsd_launcher.net
+ptvsd_launcher_lib_sklib.py
