--add_pro_micro

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
             "args": [
+                "--add_pro_micro",
                 "--position_json_filename",
                 "${workspaceFolder}/kle_layouts/${fileBasenameNoExtension}.positions.json",
                 "${workspaceFolder}/kle_layouts/${fileBasenameNoExtension}.json"
