Add more template values

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,6 +54,8 @@
                 "--add_blue_pill",
                 "--position_json_filename",
                 "${workspaceFolder}/kle_layouts/68keys-io.positions.json",
+                "--descriptors_filename",
+                "${workspaceFolder}/kle_layouts/68keys-io.descriptors.json",
                 "--output_prefix", "68-keys",
                 "--out_dir", "output/68/blue-pill",
                 "${workspaceFolder}/kle_layouts/68keys-io.json"
